# blenny

./: .gitmodules  CMakeLists.txt  README.md  blenny.asc
res/: scriptpayload.cmd
src/: main.cpp
